--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
 			"@/assets/*": ["src/assets/*"],
 			"@/atoms/*": ["src/atoms/*"],
 			"@/components/*": ["src/components/*"],
-			"@/config/*": ["src/config/*"],
+			"@/lib/*": ["src/lib/*"],
 			"@/layouts/*": ["src/layouts/*"],
 			"@/pages/*": ["src/pages/*"],
 			"@/services/*": ["src/services/*"]
